*
* 1.2.15
*

- LDAP support
- Event names support in nxevent
- Previous state parameter added to SYS_NODE_UP event 
- Added file management subagent (filemgr.nsm) 
- Removed agent configuration parameter EnableArbitraryFileUpload
- New NXSL class "Zone"
- New attributes "zone" and "zoneId" in NXSL classes "Node" and "Interface"
- New access rights for nodes: 
   - Download File (download file from agent to local workstation)
   - Upload File (upload file from local workstation to remote node) 
   - Manage Files (move, rename and delete files on remote node)
- Management console:
   - "Commands" box on node overview page made configurable
   - Object tools can have icons
   - "Last value" type gauge can show non-numeric values
   - "Trusted Nodes" property page shown for condition objects
   - Network map content can be copied to clipboard
- Android Console:
   - Added option in preference to show/hide legend in graphs
- Fixed issues: #586, #597, #598, #605, #606, #607


*
* 1.2.14
*

- STP (Spanning Tree Protocol) information used for topology discovery
- Information source for interface peers (CDP, STP, etc.) shown in console
- New NXSL function inList
- New NXSL operator abort
- New methods in NXSL class Node: enableAgent, enableConfigurationPoll,
  enableIcmp, enableSnmp, enableStatusPoll, enableTopologyPoll
- Fixed server crash if SNMP proxy unavailable
- New MIBs: AIRESPACE-REF-MIB, AIRESPACE-SWITCHING-MIB, 
     AIRESPACE-WIRELESS-MIB, FROGFOOT-RESOURCES-MIB, MIKROTIK-MIB
- SMS driver for websms.ru service
- Macro expansion supported in pattern in agent parameters File.Size and File.Count
- Attribute "instance" added to NXSL class "DCI"
- Added "L" extension to DCI custom schedules
- Traps from unmanaged nodes ignored
- Fixed repeated threshold violation events after server restart
- Added driver for Mikrotik routers
- Added driver for Ubiquity Networks wireless access points
- Added driver for Cisco Wireless Controller 4400 (former Airespace)